TAG: qcreports_db-5-2-1-3
DATE: 12/17/2014
STAFF: kstone
CHANGES: replaced IMSR query in ALL_RefCounts with IMSR csv file from Solr
2) Removed IMSR column from PRB_StrainNonStd.sql

TAG: qcreports_db-5-2-1-2
DATE: 12/8/2014
STAFF: sc
CHANGES: 
1) TR11749 - GXD_EMAPS_Terms.py: use official structure name on GXD QC report
2) TR11829 - brute force monitoring of TS27
a) GXD_SpecNoAge.sql
b) RECOMB_SpecNoAge.sql

TAG: qcreports_db-5-2-1-1
DATE: 12/8/2014
STAFF: sc
CHANGES: TR11816
PRB_StrainJAX4.sql

TAG: qcreports_db-5-2-0-4
DATE: 11/21/2014
STAFF: lec
CHANGES:
a) TR11863/GO_stats.py

TAG: qcreports_db-5-2-0-3
DATE: 11/18/2014
STAFF: lec
CHANGES:
a) TR11828/VOC_InvalidInferred.py

TAG: qcreports_db-5-2-0-2
DATE: 11/12/2014
STAFF: dbm
CHANGES:
a) TR11837/qcsunday_reports.csh: New

TAG: qcreports_db-5-2-0-?
DATE: 11/04/2014
STAFF: lec, kstone
CHANGES:
a) TR11750/postgres
obsolete : ALL_Jax_Report.py

TAG: qcreports_db-5-2-0-1
DATE: 11/04/2014
STAFF: lec
CHANGES:
a) TR11750/postgres
ALL_Jax_Report.py, MRK_GOAnnot.py 

TAG: qcreports_db-5-1-9-no tag
DATE: 10/27/2014
STAFF: lec
CHANGES:
a) mgd/GXD_SpecTheilerAge.py
quick fix for Connie/did not tag/this will get installed
when the next tag is installed

TAG: qcreports_db-5-1-9-6
DATE: 10/27/2014
STAFF: lec
CHANGES:
a) TR11544/weekly/ALL_MolNotesNoMP.py : add J:141210 to excluded list

TAG: qcreports_db-5-1-9-5
DATE: 10/27/2014
STAFF: lec, ks
CHANGES: TR11750/infrastructure/postgres/complient
1) see TR11750 in individual reports

TAG: qcreports_db-5-1-9-4
DATE: 10/24/2014
STAFF: sc
CHANGES: TR11674 - HDP-2 projects; expressed component epic
1)new: weekly/ALL_ExpressedComp.sql
2) added above to alleles section of qcr.html

TAG: qcreports_db-5-1-9-3
DATE: 10/15/2014
STAFF: lec
CHANGES: 
1) mgd/RECOMB_Images.py : fix

TAG: qcreports_db-5-1-9-2
DATE: 10/1/2014
STAFF: dbm
CHANGES: TR11652
1) weekly/MGI_EGNomenUpdate.sql - New
2) qcr.html - Added link to MGI_EGNomenUpdate.sql.rpt in nomen section

TAG: qcreports_db-5-1-9-1