@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-2-1-4
+DATE: 01/23/2015
+STAFF: sc
+CHANGES: TR11915 - annotations to AD terms with invalid EMAPS mappings
+1) mgd/GXD_EMAPS_MappingChecks.sql - updated Check 4
+
 TAG: qcreports_db-5-2-1-3
 DATE: 12/17/2014
 STAFF: kstone
